added pickle dumps

--- a/movie-recommendation-system.ipynb
+++ b/movie-recommendation-system.ipynb
@@ -1578,6 +1578,16 @@
    "id": "36a17469-ed76-4e8b-9433-096511fb41c1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "similarity.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68664410",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
